--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,21 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Topic Learn</string>
     <string name="topic_learn">Topic Learn</string>
     <string name="learn_topics">Learn by Topics</string>
+    <string name="getting_started">Getting Started</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="hint_email">Enter your email address</string>
+    <string name="prompt_password">Password</string>
+    <string name="hint_password">Enter your password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string name="password">Password</string>
+    <string name="email">Email</string>
+    <string name="don_t_have_an_account_yet" tools:ignore="StringEscaping">Don't have an account yet?</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
