--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,7 @@
     <string name="enter_topic">Enter Topic</string>
     <string name="bottom_home_text">Home</string>
     <string name="bottom_notification_text">Notification</string>
-    <string name="bottom_account_text">Account</string>
+    <string name="bottom_account_text">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
